--- a/blog-list.html
+++ b/blog-list.html
@@ -298,6 +298,20 @@
                             <a href="./blog11.html">Read more</a>
                         </div>
                     </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>December 11, 2021 </li>
+                            <li>By Andy Cai, Benjamin Qiao</li>
+                            <li>Environment</li>
+                        </ul>
+                        <h2>Millions of New Oysters Added to New York Harbor</h2>
+                        <img src="img/blog/blog-8.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>In the past six months around 11.2 million new oysters were added in New York Harbor. Oysters act as a nonstop water filter, with an adult oyster being able to filter as much as 50 gallons of water a day. Although the waters are still far too polluted for the oysters to be eaten freely, the water quality is steadily improving. 
+                            </p>
+                            <a href="./blog8.html">Read more</a>
+                        </div>
+                    </div>
                 </div>
             </div>
                 <div class="row">
