--- a/blog8.html
+++ b/blog8.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Staging, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Real Christmas Trees vs Artificial Trees | ECDE</title>
+    <title>Millions of New Oysters Added to New York Harbor | ECDE</title>
 
     <!-- Google Font -->
     <link
@@ -98,95 +98,56 @@
             <div class="blog__details__content">
               <div class="blog__details__title">
                 <ul>
-                  <li>November 26, 2021</li>
-                  <li>
-                    By Eric Cai, Andy Cai, Rohit Isukapalli, Benjamin Qiao
-                  </li>
+                  <li>December 11, 2021</li>
+                  <li>By Andy Cai, Benjamin Qiao</li>
                   <li>Environment</li>
                 </ul>
-                <h2>Real Christmas Trees vs Artificial Trees</h2>
-                <img src="img/blog/blog-7.jpeg" alt="" />
+                <h2>Millions of New Oysters Added to New York Harbor</h2>
+                <img src="img/blog/blog-8.jpeg" alt="" />
                 <p>
-                  Christmas trees have been around since 16th century Germany,
-                  when devout Christians brought trees into their homes to
-                  celebrate Christmas. They used real trees cut fresh from a
-                  forest nearby, and brought them home to decorate with pine
-                  cones and candles. Nowadays, however, you can buy an
-                  artificial tree instead of cutting it yourself. Tree ornaments
-                  could be found in Walmart, Target, and other retail stores.
-                  And it isn’t only the ornaments you can choose; now, you can
-                  pick between two different types of Christmas trees: real,
-                  logged trees, or artificial, plastic ones.
+                  In the past six months around 11.2 million new oysters were
+                  added in New York Harbor. Oysters act as a nonstop water
+                  filter, with an adult oyster being able to filter as much as
+                  50 gallons of water a day. Although the waters are still far
+                  too polluted for the oysters to be eaten freely, the water
+                  quality is steadily improving.
                 </p>
                 <br />
                 <p>
-                  Artificial Christmas trees and real Christmas trees each have
-                  their pros and cons. Pricing, looks, and authenticity all come
-                  into play. However, as consumers are becoming ever-more
-                  environmentally conscious, one of the growing factors to
-                  consider while choosing between the two is their impact on the
-                  climate, and our environment.
-                </p>
-                <br />
-                <h3>The Pros and Cons of Artificial Trees</h3>
-                <br />
-                <p>
-                  It may be common to think: Cutting down trees is not very good
-                  for the environment. Purchasing a reusable, plastic tree may
-                  be a better option. Andy Finton, the landscape conservation
-                  director and forest ecologist for the Nature Conservancy in
-                  Massachusetts, thinks differently. He told CNN that if
-                  artificial trees are used for less than six years, the carbon
-                  cost is greater than cutting down a tree. This is due to the
-                  fact that artificial trees are made of PVC, or polyvinyl
-                  chloride plastic. As plastic is a petroleum-based product,
-                  created in very polluting petrochemical facilities,
-                  transported around the world (most likely in fossil-fuel
-                  powered vehicles, thus contributing to pollution), these
-                  trees, in the short term, will contribute more to climate
-                  change than using real trees.
+                  Years of pollution and overharvesting have left the waters so
+                  contaminated that oysters could not even survive there. Carrie
+                  Roble, the vice president for estuary and education at a
+                  marine biology monitoring station, stated that it may be 100
+                  years until people can eat from the waters.
                 </p>
                 <br />
                 <p>
-                  However, if an artificial tree was used for more than 6 years,
-                  it would be contributing less to climate change than using
-                  real trees for 6 years. Jami Warner, executive director of
-                  ACTA, states that this decision was made even after
-                  considering the watering and fertilizing of real trees, which
-                  takes around 7-8 years.
+                  Another advantage to oysters is that oyster reefs, when large
+                  enough, can protect the city’s shore from storms and floods by
+                  dissipating wave energy. This could be useful in combating the
+                  effects of climate change.
                 </p>
                 <br />
                 <p>
-                  An artificial tree is also hard to dispose of. Sadly, the only
-                  way artificial trees meet their end are in landfills (taking
-                  hundreds of years to decompose) or incinerators, where they
-                  turn into poisonous gases that float into the atmosphere, or
-                  pollute the soil. Plastic trees can pollute the surrounding
-                  soil with chemicals, which hurts the surrounding biodiversity.
-                  The polluted soil can lead to plant deaths and will kill off
-                  animals in the resulting foodchain. As a result, this will
-                  kill off ecosystems and contribute to Earth’s climate change
-                  crisis.
-                </p>
-                <br />
-                <h3>The Pros and Cons of Natural Trees</h3>
-                <br />
-                <p>
-                  A big benefit of real trees is that the seven years a
-                  Christmas tree takes to grow is spent absorbing carbon dioxide
-                  from the air. Although carbon dioxide is released when the
-                  trees are cut down, the farmers almost immediately replant
-                  them, counteracting the deforestation. However, growing a
-                  Christmas tree to full levels takes seven years, which
-                  offsetts the loss of biodiversity is a slow process.
+                  A major problem is to educate the locals on why the oysters
+                  are not good to eat. As the city is still letting out
+                  untreated sewage into waterways during heavy rain, which may
+                  also involve dangerous bacterias.
                 </p>
                 <br />
                 <p>
-                  Real Christmas trees don’t last too long after being chopped.
-                  That's why after the holiday season, many can be seen thrown
-                  onto the curb or sidewalk to rot. They then get brought to
-                  landfills, where they contribute to the emissions of methane -
-                  a greenhouse gas 80x more potent than CO2.
+                  Ms. Roble, a former researcher of the project, says that
+                  showing the community the impacts of oysters, and convincing
+                  them to invest in protecting them is a significant help and
+                  possible solution to the problems of the waterways.
+                </p>
+                <br />
+                <p>
+                  Oysters are a great solution to many problems in the New York
+                  waterways. They help cleanse, populate, and recover the ocean
+                  and water surface. The $1.5 million project to add 11.2
+                  million oysters to the New York Harbor was made possible by
+                  the Hudson River Park Trust, using state funding.
                 </p>
               </div>
             </div>
