--- a/blog-list.html
+++ b/blog-list.html
@@ -312,6 +312,47 @@
                             <a href="./blog8.html">Read more</a>
                         </div>
                     </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>January 28, 2022 </li>
+                            <li>By Benjamin Qiao, Andy Cai</li>
+                            <li>Health</li>
+                        </ul>
+                        <h2>Is Sodium Consumption Good or Bad for You?</h2>
+                        <img src="img/blog/blog-12.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>In America, consumption of sodium is high, with the average American eating 3,400 mg of sodium per day, with the daily recommendation being less than 2,300 mg per day. Although there is a stigma surrounding sodium, it’s necessary to perform basic body functions like contracting and relaxing muscles and conducting nerve impulses.
+                            </p>
+                            <a href="./blog12.html">Read more</a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>November 18, 2021 </li>
+                            <li>By Eric Cai, Andy Cai</li>
+                            <li>Health</li>
+                        </ul>
+                        <h2>The Definition of "Fully Vaccinated" For Covid is Changing to Three Doses</h2>
+                        <img src="img/blog/blog-16.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>The decrease of vaccine immunity and higher risks of infections causes the rich nations to rethink the “full vaccinated” meaning. Being “fully vaccinated” usually means two jabs of the covid vaccine. However, now, some nations in Europe like Austria have already started to have more than two jabs of vaccines. In Austria, they have started requiring 3 doses of the vaccine for people over the age of 65. In Israel, you need a 3rd dose of the vaccine to get a green pass(Which allows people to go into local stores like gyms, restaurants, and other places) if you received your second dose more than 6 months prior.
+                            </p>
+                            <a href="./blog16.html">Read more</a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>November 18, 2021 </li>
+                            <li>By Eric Cai, Andy Cai</li>
+                            <li>Health</li>
+                        </ul>
+                        <h2>The DART Mission</h2>
+                        <img src="img/blog/blog-9(1).jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>On Wednesday December 1st of 2021, NASA launched it's Double Asteroid Redirection Test Mission (DART). In a year, a spacecraft of 324 million dollars, funded with American taxpayer dollars, will slam into an asteroid (dimorphos) around the size of the pyramid of Giza at a velocity of 15,000 miles per hour. </p>
+                            <a href="./blog9.html">Read more</a>
+                        </div>
+                    </div>
                 </div>
             </div>
                 <div class="row">
