--- a/blog-list.html
+++ b/blog-list.html
@@ -353,6 +353,45 @@
                             <a href="./blog9.html">Read more</a>
                         </div>
                     </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>October 22, 2021 </li>
+                            <li>By Eric Cai</li>
+                            <li>Technology</li>
+                        </ul>
+                        <h2>The Future in Nuclear Energy</h2>
+                        <img src="img/blog/blog-10.webp" alt="">
+                        <div class="blog__item__text">
+                            <p>The definition of ‘going nuclear’ or ‘the nuclear option’ are both to act drastically, often in a negative way. Generally, what comes to mind when the word ‘nuclear’ is mentioned is nukes, or nuclear weapons. The two times that nuclear weapons have been used in warfare, the bombings of Nagasaki and Hiroshima, have been so devastating that fear of nuclear technology still remains apparent to this day. Nuclear technology in other fields has not been immune to failure too, the aftermath of the devastation in the Chernobyl disaster and the Fukushima Daiichi nuclear disaster is still present today. The accidents that occured in these power plants were cataclysmic and caused mass public fear. In a 2019 poll by Gallup, only 49% of Americans approved of the use of nuclear energy. Since its conception, public opinion on nuclear energy has been waning, and showing little signs of improvement. This is, of course, due to the negative connotation that clings to even the mention of the word, ‘nuclear’.  </p>
+                            <a href="./blog10.html">Read more</a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>December 8, 2021 </li>
+                            <li>By Quan Doan, Faith Qiao</li>
+                            <li>Social</li>
+                        </ul>
+                        <h2>Basic Economics </h2>
+                        <img src="img/blog/blog-14.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>The basic principle of economics is supply and demand and the concept of an equilibrium that exists between the two. The supply graph marked by the indicator S describes the quantity (millions of gallons of gasoline) that the firm (Gasoline producer) is willing to supply at a certain price. The demand curve marked by the indicator D describes the quantity that the buyer would purchase at each given price. Intuitively speaking, the higher the price, the more the producer is willing to supply, and the less the customer is willing to buy.</p>
+                            <a href="./blog14.html">Read more</a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>November 15, 2021 </li>
+                            <li>By Quan Doan, Faith Qiao</li>
+                            <li>Environment</li>
+                        </ul>
+                        <h2>Dirty Dirty Oil</h2>
+                        <img src="img/blog/blog-18.jpeg" alt="">
+                        <div class="blog__item__text">
+                            <p>Just one day after 1.5 million people gathered on the beaches of Orange County for the annual Pacific Airshow to gaze in wonder at the majestic jet shows, a near-14 square mile slick appeared along that same coastline. 126,000 gallons of oil spilled into the ocean just three miles off the shores of Newport Beach.  Fourteen boats and 5360 feet of boom, a device used to contain the oil, were deployed in the clean-up effort.  By Sunday, the next day, 3150 gallons of the 126,000 gallons had been “recovered.” Since the beginning of the clean-up process, numerous reports of marine life washing ashore have emerged indicating the enormity of the ongoing pipeline failure. </p>
+                            <a href="./blog18.html">Read more</a>
+                        </div>
+                    </div>
                 </div>
             </div>
                 <div class="row">
