--- a/blog-list.html
+++ b/blog-list.html
@@ -392,6 +392,19 @@
                             <a href="./blog18.html">Read more</a>
                         </div>
                     </div>
+                    <div class="blog__item">
+                        <ul>
+                            <li>November 2, 2021 </li>
+                            <li>By Rohit Isukapalli, Eric Cai</li>
+                            <li>Sport</li>
+                        </ul>
+                        <h2>Washington Foorball Team Controversy</h2>
+                        <img src="img/blog/blog-13(1).png" alt="">
+                        <div class="blog__item__text">
+                            <p>The Washington Football Team, formerly known as the Washington Redskins, are a historic franchise, with three super bowl victories, and multiple Hall of Fame players. However, in the past decade, multiple employees have had alleged racist, sexist, and misogynistic behavior, along with accusations for team medical mismanagements, and claims of toxic workplace conditions. The team has also been plagued with a series of losses. At the forefront of this is the team’s owner, Dan Snyder, who has been labeled as the cause of these problems.</p>
+                            <a href="./blog13.html">Read more</a>
+                        </div>7
+                    </div>
                 </div>
             </div>
                 <div class="row">
